[tool.poetry]
name = "netscud"
version = "0.0.1"
description = ""
authors = ["ericorain <ericorain@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
asyncssh = "^2.4.2"
pyyaml = "^5.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
